# EarlyDeadlineFirst

./: .gitignore  .gitmodules  .mcp.json  Cargo.toml  LICENSE  PLAN.md  README.md
Topologies/: LKA-Pipeline-edf-config.json  LKA-Pipeline.json  LKA-Topology.json  VoiceCall-3GPP-edf-config.json  VoiceCall-3GPP.json  edf-config-1.json  edf-config.json  scheduling_topology-NoiseReduction-v1_v1.0.json  topology-NoiseReduction-v1.json  topology-multi-branches.json  topology.json  viewer-data.json
edf-builder/: app.js  index.html  style.css  ws-client.js
edf-builder/mcp-server/: package-lock.json  package.json  server.js  topology-state.js
edf-core/: Cargo.toml
edf-core/src/: lib.rs  module_trait.rs  plugin_api.rs
edf-module/: app.js  index.html  style.css
edf-server/: Cargo.toml
edf-server/src/: main.rs  plugin_loader.rs
edf-shared/: nav.css  nav.js
edf-viewer/: app.js  index.html  style.css
edf-web/: app.js  index.html  style.css
modules/aec/: Cargo.toml
modules/agc/: Cargo.toml
modules/amr_codec/: Cargo.toml
modules/beam_forming/: Cargo.toml
modules/bt_audio/: Cargo.toml
modules/cng/: Cargo.toml
modules/down_sampling/: Cargo.toml
modules/dtx/: Cargo.toml
modules/equalizer/: Cargo.toml
modules/fir_filter/: Cargo.toml
modules/gain/: Cargo.toml
modules/jitter_buffer/: Cargo.toml
modules/lane_camera/: Cargo.toml
modules/lane_detection/: Cargo.toml
modules/lane_position/: Cargo.toml
modules/limiter/: Cargo.toml
modules/mic_capture/: Cargo.toml
modules/mixer/: Cargo.toml
modules/noise_reduction/: Cargo.toml
(+33 files in other folders)
